[add] 3.4.7. タイマー終了時に音楽を再生する